--- a/css/contacto.css
+++ b/css/contacto.css
@@ -178,20 +178,21 @@ header{
 /******CONTACTO****/
 main {
 
-    background-image: url(../media/contacto.jpg);
-    background-size: 100vw 100vh;
+    background-image: url(../media/fondodecontacto.png);
+background-size: 100vw 100vh;
     background-attachment: fixed;
     margin: 0;
 }
 
 
-/*.formulario {
-    background-image: url(../media/contacto.jpg);
-    background-size: 100vw 100vh;
+
+.formulario {
+ /*   background-image: url(../media/fondodecontacto.png);
+   */ background-size: 100vw 100vh;
     background-attachment: fixed;
     margin: 0;
 
-}*/
+}
 
 .p {
     color: #FAFBFE;
@@ -255,6 +256,87 @@ form input {
 
 
 
+/*AQUI COMIENZA EL FOOTER*/
+
+footer{
+    width: 100%;
+    padding: 50px 0px;
+    font-family: 'Nunito', sans-serif;
+    /*background-color: var(--color-esqueleto);
+    */background-image: url("../media/footer.png");
+    background-size: cover;
+
+}
+
+.container__footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    padding-top: 100px;
+}
+
+.box__footer{
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+}
+
+.box__footer .logo img{
+    width: 180px;
+}
+
+.box__footer .terms{
+    max-width: 350px;
+    margin-top: 20px;
+    font-weight: 500;
+    color: #7a7a7a;
+    font-size: 18px;
+
+}
+
+.box__footer h2{
+    margin-bottom: 30px;
+    color: #242424;
+    font-weight: 700;
+}
+
+.box__footer a{
+    margin-top: 10px;
+    color: #7a7a7a;
+    font-weight: 600;
+}
+
+.box__footer a:hover{
+    opacity: 0.8;
+}
+
+.box__footer a .fab{
+    font-size: 20px;
+}
+
+.box__footer img{
+    width: 40px;
+}
+
+.box__copyright{
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    padding: 0px 40px;
+}
+
+.box__copyright p{
+    margin-top: 20px;
+    color: #7a7a7a;
+}
+
+.box__copyright hr{
+    border: none;
+    height: 1px;
+    background-color: #7a7a7a;
+}
 
 
 
