--- a/css/servicios.css
+++ b/css/servicios.css
@@ -335,7 +335,7 @@ header {
     font-weight: 500;
 }
 
-@media screen and (max-width:1200px) {
+@media screen and (max-width:2000px) {
     .container__cards{
         position: relative;
     top: 0;
@@ -351,7 +351,7 @@ header {
 
 footer{
     width: 100%;
-    
+    position: relative;
     padding: 50px 0px;
     font-family: 'Nunito', sans-serif;
     /*background-color: var(--color-esqueleto);
