--- a/css/estilos.css
+++ b/css/estilos.css
@@ -183,84 +183,61 @@ header {
 
 
 /************* EFECTO PARALLAX*************/
-
-main {
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
-    perspective: 2px;
-    padding: 40px;
-
-}
-
-section {
-    transform-style: preserve-3d;
+section#slider {
+    width: 100%;
+    height: 100%;
     position: relative;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgb(14, 2, 41);
+    overflow: hidden;
 }
 
-section h1 {
-    width: 60%;
-    font-size: 2.5rem;
-    color: rgb(2, 0, 10);
-
-}
-
-
-
-
-.no-parallax {
-   width: 100%;
-   height: 100vh; 
-  /* background-image: url(../media/fondoproductos.png);
-background-attachment: fixed;
-background-position: center;
-background-size: cover;
-*/
-}
-
-.parallax h2 {
-    width: 60%;
-    font-size: 2.5rem;
-    color: rgb(2, 0, 10);
-}
-
-.parallax::after {
-    content: " ";
+div#content-images-slider {
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
-    transform: translateZ(-1px) scale(1.5);
-    background-size: 100%;
-    z-index: -1;
     width: 100%;
-    margin: 0;
+    height: 100%;
 }
 
-.bg::after {
-    background: linear-gradient(rgba(112, 101, 153, 0.5), rgba(206, 203, 247, 0.5)), url("../media/fondo2.png");
+div.image-slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom center;
     background-size: cover;
+}
+
+h1#slider-text {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 15em;
+    background: linear-gradient(0deg, rgba(166,166,166,1) 0%, rgba(255,255,255,1) 32%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+section#content {
     width: 100%;
-    margin: 0;
+    height: 100%;
+    background-color: #f0f0f0;
 }
 
-@media screen and (min-width: 768px) {
-    section h1 {
-        text-align: center;
-        font-size: 2.5rem;
-    }
-
-    .parallax h1 {
-        text-align: center;
-        font-size: 4rem;
-    }
+div.text-slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .9;
 }
+
+/********************************/
+
+
 
 .cover{
     display: flex;
