--- a/css/estilos.css
+++ b/css/estilos.css
@@ -182,116 +182,8 @@ header {
 
 
 
-/************* EFECTO PARALLAX*************/
-section#slider {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-}
 
-div#content-images-slider {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-div.image-slider {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: bottom center;
-    background-size: cover;
-}
-
-h1#slider-text {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 15em;
-    background: linear-gradient(0deg, rgba(166,166,166,1) 0%, rgba(255,255,255,1) 32%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-section#content {
-    width: 100%;
-    height: 100%;
-    background-color: #f0f0f0;
-}
-
-div.text-slider {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: .9;
-}
-
-/********************************/
-
-
-
-.cover{
-    display: flex;
-    justify-content: center;
-    margin-top: 40px;
-}
-
-.text__information-cover{
-    width: 50%;
-}
-
-.text__information-cover h1{
-    font-size: 50px;
-    margin-top: 20px;
-
-}
-
-.text__information-cover p{
-    font-size: 18px;
-    margin-top: 40px;
-}
-
-.buttons__cover{
-    display: flex;
-    margin-top: 40px;
-}
-
-.btn__readMore-cover{
-    padding: 14px 40px;
-    border: none;
-    color: black;
-    font-weight: 500;
-    font-size: 16px;
-    cursor: pointer;
-    margin-left: 10px;
-    transition: background 300ms;
-}
-
-.btn__readMore-cover:hover{
-    background: #E8E8E8;
-}
-
-.media__cover{
-    width: 50%;
-}
-
-.media__cover video{
-    width: 100%;
-    margin-top: -40px;
-}
-
-
-
-
+/********** AQUI COMIENZAN LAS TARJETAS*******/
 
 .container__cards{
     width:100%;
@@ -412,404 +304,6 @@ div.text-slider {
 
 
 
-
-
-/*COVER*/
-/*
-.cover{
-    width: 100%;
-    padding-bottom: 60px;
-    font-family: 'Poppins', sans-serif;
-    margin-top: 100px;
-}
-
-.container__cover{
-   width: 100%;
-    margin: auto;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-
-    background-image: url(../media/prueba1.png);
-    background-size: cover;
-    background-position: bottom;
-}
-
-.cover .container__info{
-    max-width: 400px;
-    margin-top: 40px;
-    z-index: 2;
-}
-
-.cover h1{
-    max-width: 400px;
-    font-size: 40px;
-    font-weight: 900;
-    color: #020341;
-}
-
-.cover h2{
-    font-size: 40px;
-    font-weight: 900;
-    color: #020341;
-    margin-top: auto;
-}
-
-.cover p{
-    margin-top: 5px;
-    color: #020341;
-}
-
-.cover input[type="button"]{
-    padding: 10px 40px;
-    margin-top: 40px;
-    font-size: 18px;
-    font-weight: 600;
-    border: none;
-    color: white;
-    background: #02014e;
-    border-radius: 20px;
-    box-shadow: 1px 1px 30px -5px #20202049;
-    cursor: pointer;
-    transition: box-shadow 500ms;
-}
-
-.cover input[type="button"]:hover{
-    box-shadow: 1px 1px 30px -5px #20202085;
-}
-
-
-.container__vector{
-    position: relative;
-}
-
-.container__vector img{
-    position: absolute;
-    bottom: 10px;
-    right: 0px;
-    width: 600px;
-    animation: move_vector 6s ease-in-out infinite;
-    transition: all 300ms;
-}
-
-@keyframes move_vector {
-    0%{
-        transform: translateY(10px);
-    }
-    25%{
-        transform: translateY(-10px);
-    }
-    100%{
-        transform: translateY(10px);
-    }
-}
-
-@media screen and (max-width: 920px){
-    .container__vector img{
-        width: 500px;
-    }
-}
-
-
-@media screen and (max-width: 760px){
-    .container__vector img{
-        width: 500px;
-    }
-}
-
-
-@media screen and (max-width: 760px){
-
-    .container__nav{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .btn__menu{
-        display: flex;
-    }
-
-    nav{
-        height: 100%;
-        background: #F1FAFF;
-        position: fixed;
-        top: 0;
-        right: -180px;
-        padding: 0 40px;
-        transition: all 300ms;
-    }
-
-    .move_nav{
-        right: 0px;
-    }
-
-   nav ul{
-        flex-direction: column;
-    }
-
-    nav ul li{
-        margin: 20px 0px;
-    }
-
-    .container__vector img{
-        transform: scale(0);
-        animation: none;
-    }
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-
-:root{
-    --color-esqueleto:#EFF3F5;
-}
-
-
-.container__article{
-    max-width: 1000px;
-    padding: 0px 20px;
-    margin: auto;
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.container__article .box__article{
-    width: 200px;
-    height: 250px;
-    background: var(--color-esqueleto);
-    margin: 20px;
-}
-
-/******TARJETAS******//*
-main{
-
-    font-family: 'Courier New', Courier, monospace;
-    padding: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.contenedor {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 940px;
-    gap: 15px;
-    margin: auto;
-    justify-items: center;
-    align-items: center;
-}
-
-.card {
-    height: 250px;
-    width: 300px;
-    overflow: hidden;
-    margin: auto;
-    padding: 10px 30px;
-    border-radius: 2%;
-    border: 1px solid #fff;
-    transition: all .4s ease-in-out;
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.3);
-    text-align: center;
-    background: linear-gradient(-135deg,  #7b7fee, #a19cee);
-}
-
-.card:hover {
-    height: 500px;
-    width: 300px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
-}
-
-.card-encabezado img {
-    position: relative;
-    border-radius: 50%;
-    display: block;
-    height: 200px;
-    width: 200px;
-    border-top: 8px solid#fff;
-    border-bottom: 8px solid #fff;
-    object-fit: cover;
-    margin: 20px auto;
-    transition: all 0.3s ease;
-}
-
-.card-encabezado {
-    position: relative;
-}
-
-.card-encabezado:before,
-.card-encabezado:after {
-    content: '';
-    position: absolute;
-    opacity: 0.7;
-}
-
-.card-encabezado:after {
-    border-radius: 50%;
-    z-index: 20;
-    background-color: rgb(164, 210, 218);
-    width: 50px;
-    height: 50px;
-    top: 0;
-    right: 25px;
-}
-
-.card-encabezado:before {
-    width: 70px;
-    height: 70px;
-    bottom: 0;
-    left: -10px;
-    border-radius: 20px;
-    background-color: rgb(164, 210, 218);
-    transform: rotate(120deg)
-}
-
-
-.card-iconos {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    margin-bottom: 20px;
-    list-style: none;
-}
-
-.card-iconos li {
-    border-radius: 50%;
-    background-color: #fff;
-    height: 40px;
-    width: 40px;
-    margin: 0 5px;
-    line-height: 40px;
-    text-align: center;
-    transform: scale(0);
-    transition: all 0.5s ease;
-}
-
-.desplazar {
-    opacity: 0;
-    transition: all 0.5s ease;
-    transform: translate(-45px);
-}
-
-.agrandar {
-    transform: scale(0);
-    opacity: 0;
-    transition: all 0.4s ease;
-}
-
-.card:hover .agrandar {
-    opacity: 1;
-    transform: scale(1)
-}
-
-.card:hover .desplazar {
-    transform: translate(0px);
-    opacity: 1;
-}
-
-.card-iconos li a {
-    color: #2013d6;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    background: #fff;
-    display: block;
-    line-height: 40px;
-    transition: all 0.3s;
-}
-
-.card-iconos li a:hover {
-    transform: scale(1.1);
-    box-shadow: 0 0 5px #2713d6;
-}
-
-
-.card-iconos li:nth-child(1) {
-    transition-delay: 0.2s;
-}
-
-.card-iconos li:nth-child(2) {
-    transition-delay: 0.3s;
-}
-
-.card-iconos li:nth-child(3) {
-    transition-delay: 0.4s;
-}
-
-.card-iconos:nth-child(1) {
-    transition-delay: 0.2s;
-}
-
-.card-iconos:nth-child(2) {
-    transition-delay: 0.3s;
-}
-
-.card-iconos:nth-child(3) {
-    transition-delay: 0.4s;
-}
-
-.info-personal:nth-child(1) {
-    font-size: 30px;
-    font-weight: bold;
-    padding: 10px;
-    line-height: 25px;
-}
-
-.info-personal:nth-child(3) {
-    margin: 15px 0;
-}
-
-.info-personal {
-    color: #fff;
-}
-
-
-.card-acciones {
-    text-align: center;
-    margin-top: 25px;
-}
-
-.botones {
-    color: #fff;
-    border: none;
-    border-radius: 30px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-    padding: 8px 15px;
-    font-size: 16px;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(90deg, #c3c4df, #b7b2f0);
-}
-
-.botones:hover {
-    cursor: pointer;
-    width: 100%;
-}
-
-.botones span {
-    margin-right: 10px;
-    font-size: 20px;
-}
-
-@media screen and (max-width: 600px) {
-    .contenedor {
-        grid-template-columns: 1fr;
-       }
-}
-@media screen and (max-width: 852px) {
-    .contenedor {
-        gap: 5px;
-    
-    }
-}
 
 /*AQUI COMIENZA EL FOOTER*/
 
