--- a/css/productos.css
+++ b/css/productos.css
@@ -176,92 +176,22 @@ header {
     }
 }
 
-/************* EFECTO PARALLAX*************/
-
-main {
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
-    perspective: 2px;
-    padding: 40px;
-
-}
-
-section {
-    transform-style: preserve-3d;
-    position: relative;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgb(14, 2, 41);
-}
-
-section h1 {
-    width: 60%;
-    font-size: 2.5rem;
-    color: rgb(2, 0, 10);
-}
-
-.no-parallax {
-   width: 100%;
-   height: 100vh; 
-   background-image: url(../media/fondoproductos.png);
-background-attachment: fixed;
-background-position: center;
-background-size: cover;
-
-}
-
-.parallax h2 {
-    width: 60%;
-    font-size: 2.5rem;
-    color: rgb(2, 0, 10);
-}
-
-.parallax::after {
-    content: " ";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform: translateZ(-1px) scale(1.5);
-    background-size: 100%;
-    z-index: -1;
-}
-
-.bg::after {
-    background: linear-gradient(rgba(112, 101, 153, 0.5), rgba(206, 203, 247, 0.5)), url("../media/fondo2.png");
-    background-size: cover;
-}
-
-@media screen and (min-width: 768px) {
-    section h1 {
-        text-align: center;
-        font-size: 2.5rem;
-    }
-
-    .parallax h1 {
-        text-align: center;
-        font-size: 4rem;
-    }
-}
-
 .cover{
+    background-image: url(/media/prueba1.png);
+    background-size: 100vw 100vh;
+    background-attachment: fixed;
+    margin: 0;
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    
 }
 
 .text__information-cover{
-    width: 50%;
+    width: 80%;
 }
 
 .text__information-cover h1{
     font-size: 50px;
-    margin-top: 20px;
-
 }
 
 .text__information-cover p{
@@ -269,34 +199,129 @@ background-size: cover;
     margin-top: 40px;
 }
 
-.buttons__cover{
+/*************AQUI COMIENZAN LAS TARJETAS DE PRODUCTOS****************/
+
+
+.container__cards{
+    width:100%;
+    margin: auto;
     display: flex;
-    margin-top: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.btn__readMore-cover{
-    padding: 14px 40px;
-    border: none;
-    color: black;
-    font-weight: 500;
-    font-size: 16px;
-    cursor: pointer;
-    margin-left: 10px;
-    transition: background 300ms;
+.card{
+    width: 350px;
+    margin: 10px;
+    padding: 20px;
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+    background: rgba(255, 255, 255, 0.1);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 15px;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    transition: all 300ms;
 }
 
-.btn__readMore-cover:hover{
-    background: #E8E8E8;
+.card:hover{
+    transform: translateY(-10px);
 }
 
-.media__cover{
-    width: 50%;
+.card:hover .cover__card img{
+    transform: scale(1.1);
 }
 
-.media__cover video{
+.cover__card{
     width: 100%;
-    margin-top: -40px;
+    height: 180px;
+    border-radius: 14px;
+    overflow: hidden;
 }
+
+.cover__card img{
+    width: 110%;
+    transition: all 300ms;
+}
+
+.card h2{
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 20px;
+    color: #16053d;
+}
+
+.card p{
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: 300;
+    color: #16053d;
+    letter-spacing: 0.5px;
+}
+
+.card hr{
+    margin-top: 30px;
+    border: none;
+    height: 0.2px;
+    background: #41414138;
+}
+
+.footer__card{
+    margin-top: 10px;
+    display: flex;
+    color: #16053d;
+    justify-content: space-between;
+}
+
+.footer__card h3{
+    font-size: 15px;
+    font-weight: 500;
+}
+
+
+.botones {
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+    padding: 8px 15px;
+    font-size: 16px;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(90deg, #c3c4df, #b7b2f0);
+}
+
+.botones:hover {
+    cursor: pointer;
+    width: 100%;
+}
+
+.botones span {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+@media screen and (max-width:2000px) {
+    .container__cards{
+        position: relative;
+    top: 0;
+        left: 0;
+        transform: none;
+        margin-top: 100px;
+        padding-bottom: 100px;
+    }
+}
+
+
+
+
 
 
 /*AQUI COMIENZA EL FOOTER*/
