--- a/css/productos.css
+++ b/css/productos.css
@@ -9,11 +9,7 @@
 }
 
 body {
-    /*background: #F5F5F5;*/
-    background-image: url(/media/prueba2.png);
-    background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-    background-attachment: fixed;
+background: #F5F5F5;
     margin: 0;
 }
 
@@ -183,13 +179,14 @@ header {
 
 .cover{
     
-    display: flex;
+  display: flex;
     justify-content: center;
     
 }
 
 .text__information-cover{
     width: 80%;
+    
 }
 
 .text__information-cover h1{
@@ -201,8 +198,89 @@ header {
     margin-top: 40px;
 }
 
-/*************AQUI COMIENZAN LAS TARJETAS DE PRODUCTOS****************/
 
+
+/************* EFECTO PARALLAX*************/
+
+.container__background-triangle{
+    max-width: 1200px;
+   height: 600px;
+    margin: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.triangle{
+    width: 300px;
+    height: 300px;
+    background: red;
+    position: absolute;
+}
+
+.triangle1{
+    width: 250px;
+    height: 250px;
+    background: linear-gradient(to left, #0ea1e6, #cddcf0);
+    right: 100px;
+    top: 100px;
+    animation: t1 8s ease infinite;
+}
+
+.triangle2{
+    width: 200px;
+    height: 200px;
+    background: linear-gradient(to left, #3990e2, #649fc7);
+    top: 350px;
+    animation: t2 9s ease infinite;
+}
+
+.triangle3{
+    width: 300px;
+    height: 300px;
+    background: linear-gradient(to left, #506975, #0fa4df);
+    left: 200px;
+    animation: t3 7s ease infinite;
+}
+
+@keyframes t1 {
+    0%{
+        transform: rotate(45deg) translateY(0px);
+    }
+    50%{
+        transform: rotate(45deg) translateY(20px);
+    }
+    100%{
+        transform: rotate(45deg) translateY(0px);
+    }
+}
+
+@keyframes t2 {
+    0%{
+        transform: rotate(65deg) translateY(0px);
+    }
+    50%{
+        transform: rotate(65deg) translateY(20px);
+    }
+    100%{
+        transform: rotate(65deg) translateY(0px);
+    }
+}
+
+@keyframes t3 {
+    0%{
+        transform: rotate(45deg) translateY(0px);
+    }
+    50%{
+        transform: rotate(45deg) translateY(20px);
+    }
+    100%{
+        transform: rotate(45deg) translateY(0px);
+    }
+}
+
+/*************AQUI COMIENZAN LAS TARJETAS DE PRODUCTOS****************/
 
 .container__cards{
 
@@ -326,16 +404,17 @@ header {
 
 
 
-
 /*AQUI COMIENZA EL FOOTER*/
 
 footer{
     width: 100%;
+    position: relative;
     padding: 50px 0px;
     font-family: 'Nunito', sans-serif;
     /*background-color: var(--color-esqueleto);
-    */background-image: url("../media/footer.png");
-    background-size: cover;
+    */
+    background-image: url("../media/footer.png");
+   background-size: cover; 
 
 }
 
@@ -408,3 +487,33 @@ footer{
     height: 1px;
     background-color: #7a7a7a;
 }
+
+
+@media screen and (max-width: 300px) {
+  
+footer{
+     
+ position: absolute;
+
+}
+}
+
+@media screen and (max-width: 760px) {
+ 
+footer{
+   
+ position: absolute;
+  
+}
+}
+
+@media screen and (max-width: 1200px) {
+   
+footer{
+  
+    position: absolute;
+ 
+}
+}
+
+
